--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,39 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
 }
 
-.App-link {
-  color: #61dafb;
+.searching-container {
+  display: flex;
+  flex-wrap: wrap-reverse;
+  align-items: center;
+  /* justify-content: center; */
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.array-container {
+  display: flex;
+  justify-content: space-around;
+  align-items: flex-end;
+  height: 600px;
+  width: 1000px;
+  border: 1px solid red;
+  margin: 0px 5px;
+}
+
+.utility-container {
+  display: flex;
+  flex-direction: column;
+  height: 400px;
+  width: 300px;
+  border: 1px solid black;
+  padding: 15px;
+}
+
+.array-bar {
+  width: 6px;
+  background-color: aqua;
+  transition: all 0.5s;
 }
