--- a/src/App.css
+++ b/src/App.css
@@ -100,7 +100,7 @@ input, .select {
 
 .sorting-array-bar {
   width: 50px;
-  /* transition: all 0.1s; */
+  transition: height 0.5s;
   border-radius: 3px;
   margin: 0px 1px;
 }
