--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 body {
-  background-color: whitesmoke;
+  background-color: rgb(0, 0, 0);
 }
 
 .btn {
@@ -67,7 +67,7 @@ input, .select {
 .array-container {
   display: flex;
   justify-content: space-between;
-  align-items: flex-end;
+  align-items: center;
   height: 550px;
   width: 1000px;
   box-shadow: black 1px 0px 15px;
@@ -100,7 +100,7 @@ input, .select {
 
 .sorting-array-bar {
   width: 50px;
-  transition: height 0.2s;
+  transition: height 0.1s;
   border-radius: 3px;
   margin: 0px 1px;
 }
