--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,14 @@ body {
   background-color: rgb(0, 0, 0);
 }
 
+p{
+  margin: 0px;
+  padding: 0px;
+  background-color: rgba(0, 162, 255, 0.699);
+  border-radius: 4px;
+}
+
+
 .btn {
   width: 200px;
   height: 50px;
@@ -60,7 +68,7 @@ input, .select {
   flex-wrap: wrap;
   align-items: center;
   height: 100%;
-  margin-top: 50px;
+  margin-top: 40px;
   /* justify-content: flex-start; */
 }
 
@@ -70,7 +78,7 @@ input, .select {
   align-items: center;
   height: 550px;
   width: 1000px;
-  box-shadow: black 1px 0px 15px;
+  box-shadow: grey 1px 0px 15px;
   margin: 0px 5px;
   padding: 10px;
   border-radius: 10px;
@@ -80,7 +88,6 @@ input, .select {
   display: flex;
   flex-direction: column;
   height: 400px;
-  width: 250px;
   padding: 5px;
   align-items: center;
   justify-content: center;
@@ -110,7 +117,7 @@ input, .select {
   width: 250px;
   height: 50px;
   left: 39vw;
-  top: 9vh;
+  top: 4vh;
   transform: translateX(-125px);
   border-radius: 13px;
   line-height: 50px;
@@ -126,3 +133,32 @@ input, .select {
   background-color: #751111;
   box-shadow: rgba(0, 0, 0, 0.5) 1px 1px 10px;
 }
+.navbar{
+  width: 100%;
+  /* background-color: #751111; */
+  display: flex;
+  justify-content: center;
+}
+
+.navbtn {
+  box-shadow: rgb(80, 99, 99) 0px 0px 0px; 
+  height: 40px;
+  width: 140px;
+  font-size: 21px;
+  background-color:  rgb(255, 85, 241);
+  cursor: pointer;
+  position: absolute;
+  top: 4vh;
+  left: 81.6vw;
+}
+
+.navbtn2{
+  top: 1vh;
+}
+.navbtn1{
+  top: 8vh;
+}
+.navbtn:hover {
+  box-shadow: rgb(80, 99, 99) 0px 0px 0px; 
+  background-color:  rgb(255, 85, 241);
+} 
